fix: blog visual margin and visibility
- many sites manually hide .blog-visual, because of margin when no image
- image should become smaller sooner

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
@@ -59,10 +59,13 @@ Styleguide Components.DjangoCMS.Blog.App.Page
 
 /* Media & Content */
 
-:--article-page :is(.blog-visual, .blog-content) {
-  --blog-item-media-buffer: 45px;
+:--article-page .blog-lead,
+:--article-page .blog-visual,
+:--article-page .blog-content {
+  font-size: var(--global-font-size--medium);
+  line-height: 2;
 
-  margin-block: var(--blog-item-media-buffer) 60px;
+  margin-block: 45px;
 }
 
 /* To undo inline content styles */
@@ -85,19 +88,24 @@ Styleguide Components.DjangoCMS.Blog.App.Page
   height: auto;
 }
 /* To support vertical layouts at narrow viewports */
-@media (--x-narrow-and-below) {
+@media (--narrow-and-below) {
   :--article-page .blog-visual {
     display: grid;
     justify-content: center;
-    margin-bottom: var(--blog-item-media-buffer);
   }
 }
 /* To support horizontal layouts at wide viewports */
-@media (--x-narrow-and-above) {
+@media (--narrow-and-above) {
   :--article-page .blog-visual {
     float: left;
     margin-right: var(--blog-item-media-buffer);
   }
+}
+:--article-page .blog-visual:where(:not(:has(*))) {
+    margin: unset;
+}
+:--article-page .blog-visual:empty {
+    display: none;
 }
 
 /* To prevent footer on right side of page */
@@ -125,12 +133,6 @@ Styleguide Components.DjangoCMS.Blog.App.Page
 
 
 /* Media & Content - Content */
-
-:--article-page .blog-lead,
-:--article-page .blog-content {
-  font-size: var(--global-font-size--medium);
-  line-height: 2;
-}
 
 /* Add space between all list items */
 /* FAQ: Use case is list items with as much text as a paragraph */
